--- a/weatherApp/src/main/resources/application.properties
+++ b/weatherApp/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=weatherApp
 #X-RapidAPI-Key=e454d3e9e9mshbaf8933bd9ab73cp138ef3jsn42f2a20f1022
-X-RapidAPI-Key=738e943283msha9df0c0bc496552p1b1c1ajsn0d92c4b15f5e
+#X-RapidAPI-Key=738e943283msha9df0c0bc496552p1b1c1ajsn0d92c4b15f5e
+X-RapidAPI-Key=60cd4affa6mshad9ae9202ff3457p1a1d31jsnc00f6ed93af6
 weather.apiKey=59a12c0195465b4ec2825de768f692dc
 X-RapidAPI-Host=forecast9.p.rapidapi.com
 server.port=8084
